Fixed some gap errors and also adjust some font sized and heading in search page

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,8 +6,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 25px;
+  /* gap: 25px; */
   padding-top: 90px;
+}
+.search-page > * {
+  margin: 10px 0;
 }
 
 .input {
@@ -34,11 +37,12 @@
   letter-spacing: 2px;
   font-weight: 900;
   font-size: 2.5rem;
+  padding: 10px;
 }
 
 .label-secondary {
   color: dodgerblue;
-  font-family: "Courier New", Courier, monospace;
+  font-family: 'Courier New', Courier, monospace;
   letter-spacing: 2px;
   font-size: 1.5rem;
   font-weight: 700;
@@ -55,4 +59,17 @@
 .spinner-container {
   display: flex;
   justify-content: center;
+}
+
+@media only screen and (max-width: 600px) {
+  .label-primary {
+    letter-spacing: 1px;
+    font-weight: 600;
+    font-size: 1.5rem;
+    padding: 5px;
+  }
+  .input {
+    padding: 8px;
+    font-size: 1.5rem;
+  }
 }
